--- a/popup.css
+++ b/popup.css
@@ -7,7 +7,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
-.container{
+.timeChoice{
     width: 100%;
     height: 100vh;
     background: linear-gradient(to right, #485563, #29323c);
