--- a/popup.css
+++ b/popup.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    filter: brightness(0.8);
 }
 
 .timeChoice{
