--- a/popup.css
+++ b/popup.css
@@ -17,20 +17,20 @@ body {
     color: #ffeac7;
 }
 
-#timerPage{
+#timerPage {
     display: none;
     flex-direction: column;
     align-items: center;
     font-size: 400;
 }
 
-#reset{
+#reset {
     display: flex;
     align-self: center;
     justify-self: start;
 }
 
-#timeChoice{
+#timeChoice {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -38,50 +38,47 @@ body {
     font-size: 400;
 }
 
-
-
-
-.span{
+.span {
     padding-top: 10px;
 }
 
-#timeS, #timeB{
+#timeS,
+#timeB {
     padding: 15px;
     justify-content: center;
 }
 
-
-.screenTime{
+.screenTime {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
 }
 
-.illustration{
+.illustration {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
 }
 
-img{
-    max-width: 200px;;
+img {
+    max-width: 200px;
+    ;
     min-width: none;
-    height:auto;
+    height: auto;
     border-radius: 50%;
     padding: 15px;
 }
 
-.breakTime{
+.breakTime {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
 }
 
-.btn{
+.btn {
     padding: 5px 30px;
     background: #5fc0f43f;
     color: #fff;
@@ -94,11 +91,16 @@ img{
     transition: transform 0.2s;
 }
 
-.btn:active{
+.btn:active {
     transform: scale(0.95);
 }
 
-#startBtn{
+#startBtn:checked {
+    /* Appliquer le flou lorsque le bouton Start est activé */
+    filter: blur(5px);
+}
+
+#startBtn {
     background-color: #92d9ffad;;
     color: #fff;
 }
@@ -191,3 +193,12 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+*/
+
+
+
+
+
+
+
+
