--- a/popup/popup.css
+++ b/popup/popup.css
@@ -18,7 +18,7 @@ body {
 }
 
 #timerPage {
-    display: none;
+    display: flex;
     flex-direction: column;
     align-items: center;
     font-size: 400;
